# LLM-in-CPP

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/llm/: checkpoint.hpp  data.hpp  dtype.hpp  init.hpp  llm.hpp  module.hpp  nn.hpp  ops.hpp  optim.hpp  tensor.hpp
include/llm/models/: minigpt.hpp
models/: minigpt.cpp
src/: autograd.cpp  core_stub.cpp  main.cpp  ops.cpp  tensor.cpp
src/data/: dataloader.cpp  dataset.cpp
src/nn/: dropout.cpp  layernorm.cpp  module.cpp
src/optim/: adamw.cpp  sgd.cpp
src/utils/: checkpoint.cpp  init.cpp
tests/: test_main.cpp  test_runner.cpp
